--- a/Primeros pasos/index.html
+++ b/Primeros pasos/index.html
@@ -5,12 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Udemy_ Desarrollo web desde cero</title>
+    <link rel="stylesheet" href="/Estilos/estilos.css">
 </head>
 
 <body>
 
     <head>
+        <!-- Equiqueta - atributo - Valor -->
+        <h1>H1 (titulos)</h1>
+        <h2>H2</h2>
+        <h3>H3</h3>
+        <h4>h4</h4>
+        <h5>h5</h5>
+        <h6>h6</h6>
+        <img src="/Imagenes/GatoMimoso.png" alt="GatoCachorro/mimoso">
         
+        <p>Parrafos</p>
     </head>
 
     <main>
