Nombre de archivo css
se cambio de nombre de la carpeta que contiene al archivo css

--- a/Primeros pasos/index.html
+++ b/Primeros pasos/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Udemy_ Desarrollo web desde cero</title>
-    <link rel="stylesheet" href="/Estilos/estilos.css">
+    <link rel="stylesheet" href="/Main/estilos.css">
 </head>
 
 <body>
