--- a/Primeros pasos/index.html
+++ b/Primeros pasos/index.html
@@ -7,11 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primer titulo</title>
     <link rel="stylesheet" href="/Diseños/estilos.css">
+    <script src="/Archivos NodeJS/codigo.js"></script>
 </head>
 
 <body>
 
     <head>
+
+        <!-- <script>
+            alert ("Bievenido a mi Página web de prueba, presione enter para acceder al contenido")
+
+        </script> -->
         <!-- <div>Equiqueta - atributo - Valor</div>  -->
         <!-- <h1>H1 (titulos)</h1> -->
         <!-- <h2>H2</h2> -->
@@ -22,7 +28,7 @@
         <!-- <img src="/Imagenes/GatoMimoso.png" alt="GatoCachorro/mimoso">  -->
 
         <!-- <p>Parrafos</p>  -->
-        <h1>Hola Mundo</h1>
+        <h1>Bienvenido a la web 2.0</h1>
 
         <style>
             html{
