--- a/Primeros pasos/index.html
+++ b/Primeros pasos/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primer titulo</title>
-    <link rel="stylesheet" href="/Diseños/estilos.css">
-    <script src="/Archivos NodeJS/codigo.js"></script>
+    <link rel="stylesheet" href="/Diseños/estilos.css"> <!--etiqueta de referencia al archivo css-->
+    <script src="/Archivos NodeJS/codigo.js"></script> <!--etiqueta de referencia al archivo JavaScript-->
 </head>
 
 <body>
 
-    <head>
+    <header>
 
         <!-- <script>
             alert ("Bievenido a mi Página web de prueba, presione enter para acceder al contenido")
@@ -50,7 +50,7 @@
         pueda acceder mediante esa busqueda a nuestra pagina web, de acuerdo a los productos que se ofrezca en la misma   -->
         <meta name="description" content="TecnoVentas">
 
-    </head>
+    </header>
 
     <main>
 
