ejercicios con section
realizando pruebas con ejercicios de section

--- a/Primeros pasos/index.html
+++ b/Primeros pasos/index.html
@@ -16,19 +16,38 @@
 
 <body>
 
+    <figure>
+        <img src="/Imagenes/GatoMimoso.png" alt="">
+
+        <figcaption> <!--se utiliza como descripcion de alguna imagen-->
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus earum inventore voluptatum delectus
+            deserunt quisquam cupiditate quae, aperiam odio molestiae possimus nobis nemo veniam maiores qui! Ipsam
+            accusamus incidunt illum?
+        </figcaption>
+    </figure>
+
+    <div>
+        <img src="/Imagenes/GatoMimoso.png" alt="">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum magni vitae neque quasi, dolores repellat,
+            doloribus magnam debitis laborum consequatur delectus a necessitatibus voluptates quos voluptas? Pariatur
+            alias illum facilis.</p>
+    </div>
+
     <ol>
         <li>primer punto</li>
         <li>segundo punto</li>
         <li>tercer punto</li>
     </ol>
 
-    <ul style="list-style: none;">
+    <ul style="list-style:georgian;">
         <li>primer punto</li>
         <li>segundo punto</li>
         <li>tercer punto</li>
     </ul>
     <!-- se centra el texto en el documento -->
-    <blockquote>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque corrupti ex recusandae provident, itaque saepe obcaecati optio fugiat est, officiis consequatur, enim voluptate dicta voluptates voluptatum asperiores debitis possimus quod.</blockquote>
+    <blockquote>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque corrupti ex recusandae provident,
+        itaque saepe obcaecati optio fugiat est, officiis consequatur, enim voluptate dicta voluptates voluptatum
+        asperiores debitis possimus quod.</blockquote>
 
     <h1>hola Mundo</h1>
     <h2>hola Mundo</h2>
@@ -45,7 +64,7 @@
     <pre>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, a porro, expedita consectetur quasi magna
     </pre>
-    
+
 
     <!-- 
     <section>
