--- a/Primeros pasos/prueba2.html
+++ b/Primeros pasos/prueba2.html
@@ -29,6 +29,8 @@
 
     <!-- <iframe src="otro.html" frameborder="0" width="400px" height="600px"></iframe> -->
 
+    <a href="mailto:leabertero@gmail.com">Contactame</a>
+
     <a href="#uno">Uno</a>
     <a href="#dos">Dos</a>
     <a href="#tres">Tres</a>
