enlaces de referencia
trabajando en enlaces de referencia

--- a/Primeros pasos/prueba2.html
+++ b/Primeros pasos/prueba2.html
@@ -30,11 +30,18 @@
     <!-- <iframe src="otro.html" frameborder="0" width="400px" height="600px"></iframe> -->
 
     <a href="mailto:leabertero@gmail.com">Contactame</a>
+    <a href="tel: 351875887|">Telefono</a>
+    <a href="archivos/CA $ 922 0009099205-Movimientos (1).pdf">descargar movimientos de cuenta</a>
+
+    <br>
+    <br>
 
     <a href="#uno">Uno</a>
     <a href="#dos">Dos</a>
     <a href="#tres">Tres</a>
     <a href="#cuatro">Cuatro</a>
+    
+    <br>
 
     <section id="uno">
         <h1>uno</h1>
