descarga de documentos
enlaces con atributos para descargar documentos pdf

--- a/Primeros pasos/prueba2.html
+++ b/Primeros pasos/prueba2.html
@@ -31,7 +31,7 @@
 
     <a href="mailto:leabertero@gmail.com">Contactame</a>
     <a href="tel: 351875887|">Telefono</a>
-    <a href="archivos/CA $ 922 0009099205-Movimientos (1).pdf">descargar movimientos de cuenta</a>
+    <a href="archivos/CA $ 922 0009099205-Movimientos (1).pdf" download="Movimientos">descargar movimientos de cuenta</a>
 
     <br>
     <br>
