etiqueta de incrustado
ejercicios de contenido incrustado

--- a/Primeros pasos/etiquetas_prueba.html
+++ b/Primeros pasos/etiquetas_prueba.html
@@ -1,19 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etiquetas de prueba</title>
+
+    <style>
+        body {
+            font-family: sans-serif;
+        }
+
+        p span {
+            background-color: teal;
+            color: white;
+            font-size: 25px;
+            display: inline-block;
+            padding: 5px 10px;
+
+        }
+    </style>
+
 </head>
 
+
 <body>
-    
-<p>Llamó a su <strong>perro</strong> <em>pluto</em> por que le <u>recordó</u> los <br><i>dibujos animados</i> de su <b>infancia</b></p>
+
+    <p>Llamó a su <strong>perro</strong> <em>pluto</em> por que le <u>recordó</u> los <br><i>dibujos animados</i> de su
+        <b>infancia</b></p>
 
 
-<small>ponemos algun texto, texto pequeño</small>
-<big>hola como estas?,texto grande</big>
+    <small>ponemos algun texto, texto pequeño</small>
+    <big>hola como estas?,texto grande</big>
+
+    <p>
+        el siguiente codigo hace referencia a hola mundo en PHP: <br>
+        <code>if(valor) //...</code>
+        <code>Hecho en "Hola mundo"</code>
+    </p>
+
+    <big>Texto grande</big>
+    <small>hola</small>
+
+    <p>
+        registrada, copyright <!--para indeces y sub indeices las etiquetas sub y sup-->
+    </p>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur <br>adipisicing elit. Commodi doloribus obcaecati <br> autem numquam,
+        placeat blanditiis libero minima nesciunt eaque fuga nam voluptas eum pariatur non quidem deserunt tenetur totam
+        repellat?
+
+        <cite>Leandro</cite>
+    </p>
+
+    <p>Lorem ipsum <span>, sit amet consectetur adipisicing elit. Eaque, cumque molestias</span> commodi minus <span>,
+            hic fuga quibusdam quam in voluptas</span> soluta repellendus velit itaque odio! Nostrum ratione illo fuga
+        dolores.</p>
+
+
 
 </body>
+
 </html>
