--- a/Primeros pasos/contenido-incrustado_4.html
+++ b/Primeros pasos/contenido-incrustado_4.html
@@ -16,10 +16,17 @@
         var c = document.getElementById("Mi_tablero");
         var ct = c.getContext("2d");
 
-        ct.fillStyle = "red";
+        ct.fillStyle = "green";
         ct.fillRect( 230, 150, 100, 100 );
 
+        ct.fillStyle = "yellow";
+        ct.fillRect( 20, 100, 100, 100 );        
+        
+        ct.strokeRect (150, 150, 50, 50);
+
     </script>
+
+    
 
 
 </body>
