--- a/Ejercicio_Tablas/Index_tablas.html
+++ b/Ejercicio_Tablas/Index_tablas.html
@@ -9,7 +9,40 @@
 
 <body>
 
-    
+    <h1>Ejercicios de tablas</h1>
+
+    <style>
+
+        table{
+            border-collapse: collapse;
+        }
+
+        td{
+            border: 2px solid orangered;
+            padding: 10px 10px;
+
+
+
+        }
+    </style>
+
+    <table>
+        <tr>
+            <td>Gilbert</td>
+            <td>Rodriguez</td>
+            <td>Santa Marta</td>
+            <td>54867685468</td>
+
+        </tr>
+
+        <tr>
+            <td>Gilbert</td>
+            <td>Rodriguez</td>
+            <td>Santa Marta</td>
+            <td>54867685468</td>
+
+        </tr>
+    </table>
     
 </body>
 </html>
