tablas pimera parte
ejemplo de tablas tercera parte finalizado , sin ejercicios de tablas(por realizar)

--- a/Ejercicio_Tablas/Index_tablas.html
+++ b/Ejercicio_Tablas/Index_tablas.html
@@ -20,7 +20,7 @@
         }
 
         th{
-            background-color: brown;
+            background-color: rgb(35, 93, 179);
             font-size: 35px;
             border: solid orange;
             color:whitesmoke;
@@ -35,19 +35,190 @@
 
     <h1>Ejercicios de tablas</h1>
 
+    <table>
+        <table>
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Descripción</th>
+                    <th>Precio</th>
+
+                </tr>
+            </thead>
+        </table>
+
+        <table>
+            <tbody>
+                <tr>
+                    <td>Nombre</td>
+                    <td>Descripción</td>
+                    <td>Precio</td>
+
+                </tr>
+
+                <tr>
+                    <td>Zapatos nike</td>
+                    <td>Ultra rapidos</td>
+                    <td>30.000</td>
+
+                </tr>
+
+                <tr>
+                    <td>Bolso Gucchi</td>
+                    <td>negro</td>
+                    <td>70.000</td>
+
+                </tr>
+
+                <tfoot>
+                    <tr>
+                        <td colspan="2" >Total</td>
+                        <td>100.000</td>
+
+                    </tr>
+                </tfoot>
+
+            </tbody>
+        </table>
+
+        <br>
+        <tbody>
+            <tr>
+                <td rowspan="3">Paises americanos</td>
+                <td>Colombia</td>
+            </tr>
+
+            <tr>
+                <td>Mexico</td>
+            </tr>
+
+            <tr>
+                <td>Canadá</td>
+            </tr>
+
+            <tr>
+                <td rowspan="3">Paises Europeos</td>
+                <td>España</td>
+            </tr>
+
+            <tr>
+                <td>Italia</td>
+            </tr>
+
+            <tr>
+                <td>Francia</td>
+            </tr>
+        </tbody>
+    </table>
+
 
     <table>
-
+        <caption>Usuarios</caption>
         <thead>
+
+            <tr>
+                <th>Informacion básica</th>
+                <th>Aspecto físico</th>
+
+            </tr>
+
             <tr>
                 <th>Nombre</th>
                 <th>Apellido</th>
                 <th>Ciudad</th>
                 <th>Teléfono</th>
+                <th>Altura</th>
+                <th>Peso</th>
             </tr>
         </thead>
 
+
+
         <tbody>
+            <tr>
+                <td>Leandro</td>
+                <td>Bertero</td>
+                <td>Cordoba</td>
+                <td>543464564</td>
+            </tr>
+
+            <tr>
+                <td>Leandro</td>
+                <td>Bertero</td>
+                <td>Cordoba</td>
+                <td>353214535</td>
+            </tr>
+
+            <tr>
+                <td>Leandro</td>
+                <td>Bertero</td>
+                <td>Cordoba</td>
+                <td>353214535</td>
+            </tr>
+
+            <tr>
+                <td>Leandro</td>
+                <td>Bertero</td>
+                <td>Cordoba</td>
+                <td>543464564</td>
+            </tr>
+
+            <tr>
+                <td>Leandro</td>
+                <td>Bertero</td>
+                <td>Cordoba</td>
+                <td>353214535</td>
+            </tr>
+
+            <tr>
+                <td>Leandro</td>
+                <td>Bertero</td>
+                <td>Cordoba</td>
+                <td>353214535</td>
+            </tr>
+
+            <tr>
+                <td>Leandro</td>
+                <td>Bertero</td>
+                <td>Cordoba</td>
+                <td>543464564</td>
+            </tr>
+
+            <tr>
+                <td>Leandro</td>
+                <td>Bertero</td>
+                <td>Cordoba</td>
+                <td>353214535</td>
+            </tr>
+
+            <tr>
+                <td>Leandro</td>
+                <td>Bertero</td>
+                <td>Cordoba</td>
+                <td>353214535</td>
+            </tr>
+
+            <tr>
+                <td>Leandro</td>
+                <td>Bertero</td>
+                <td>Cordoba</td>
+                <td>543464564</td>
+            </tr>
+
+            <tr>
+                <td>Leandro</td>
+                <td>Bertero</td>
+                <td>Cordoba</td>
+                <td>353214535</td>
+            </tr>
+
+            <tr>
+                <td>Leandro</td>
+                <td>Bertero</td>
+                <td>Cordoba</td>
+                <td>353214535</td>
+            </tr>
+
             <tr>
                 <td>Leandro</td>
                 <td>Bertero</td>
@@ -86,6 +257,11 @@
 
 
     <table>
+
+        <colgroup style="background-color: aqua; width: 200px;"></colgroup>
+        <colgroup style="background-color: red; width: 200px;"></colgroup>
+        <colgroup style="background-color: teal; width: 200px;"></colgroup>
+        <colgroup style="background-color: gray; width: 200px;"></colgroup>
 
 
         <tr>
