correccion en tfoot
ok!

--- a/Ejercicio_Tablas/ejercicio de tablas_reahaciendo/Ejercicio_ejemplo-tablas.html
+++ b/Ejercicio_Tablas/ejercicio de tablas_reahaciendo/Ejercicio_ejemplo-tablas.html
@@ -59,12 +59,14 @@
             <tr>
 
                 <th>Bolso Gucci</th>
-                <th>Bolso con argollas /th>
+                <th>Bolso con argollas</th>
                 <th>140</th>
             
             </tr>
 
         </tbody>
+
+        <br>
 
         <tfoot>
             <tr>
@@ -74,8 +76,6 @@
         </tfoot>
 
     </table>
-
-    
 
     <br>
 
