ejercicios de formulario
completando ejercicios de firmulario

--- a/Ejercicio_Tablas/ejercicio de tablas_reahaciendo/Formularios/Formularios.html
+++ b/Ejercicio_Tablas/ejercicio de tablas_reahaciendo/Formularios/Formularios.html
@@ -11,7 +11,7 @@
 <body>
 
     <form action="" method="get">
-        <!-- <input name="Nombre" type="text">
+        <input name="Nombre" type="text">
         <br>
         <input name="Apellido" type="text">
         <br>
@@ -19,7 +19,7 @@
         <br>
         <input type="number">
         <br>
-        <input type="submit"> -->
+        <input type="submit">
         
         <!-- el atributo name, debe tener el mismo nombre por que es el que lo relaciona con los mismos valores (frutas) -->
         <input name="frutas" value="Manzana" type="checkbox">Manzana<br>
