--- a/Ejercicio_Tablas/ejercicio de tablas_reahaciendo/Formularios/Formularios.html
+++ b/Ejercicio_Tablas/ejercicio de tablas_reahaciendo/Formularios/Formularios.html
@@ -13,19 +13,31 @@
     <form action="" method="get">
         <input name="Nombre" type="text">
         <br>
+        <br>
         <input name="Apellido" type="text">
+        <br>
         <br>
         <input type="date">
         <br>
+        <br>
         <input type="number">
         <br>
+        <br>
         <input type="submit">
+        <br>
+        <br>
+        <input type="phone" name="Telefono" id="">
+        <br>
+        <br>
+        <input type="submit" name="Enviar" id="">
         
         <!-- el atributo name, debe tener el mismo nombre por que es el que lo relaciona con los mismos valores (frutas) -->
+        <br>
+        <br>
         <input name="frutas" value="Manzana" type="checkbox">Manzana<br>
         <input name="frutas" value="Pera" type="checkbox">Pera<br>
         <input name="frutas" value="Durazno" type="checkbox">Durazno<br>
-        
+        <br>
 
         <button type="submit">Enviar</button>
     </form>
