input de radios
ejercicios de input de radios, (Multiselección)

--- a/Ejercicio_Tablas/ejercicio de tablas_reahaciendo/Formularios/Formularios.html
+++ b/Ejercicio_Tablas/ejercicio de tablas_reahaciendo/Formularios/Formularios.html
@@ -30,7 +30,7 @@
         <br>
         <br>
         <input type="submit" name="Enviar" id="">
-        
+
         <!-- el atributo name, debe tener el mismo nombre por que es el que lo relaciona con los mismos valores (frutas) -->
         <br>
         <br>
@@ -40,7 +40,36 @@
         <br>
 
         <button type="submit">Enviar</button>
+
+
+        <!-- estructuras de selección -->
+
+        <h3>seleeccione una de las opciones</h3>
+
+        <label for="fsdf">
+            <div>opc - 1</div>
+            <input type="radio" name="opcion 1" id="">
+        </label>
+        <br>
+        <br>
+        <label for="fsdf">
+            <div>opc - 2</div>
+            <input type="radio" name="opcion 1" id="">
+        </label>
+        <br>
+        <br>
+        <label for="fsdf">
+            <div>opc - 3dsa</div>
+            <input type="radio" name="opcion 1" id="">
+        </label>
+        <br>
+        <label for="send">
+            <br>
+            <br>
+            <input type="submit" name="Aceptar" id="">
+        </label>
     </form>
-    
+
 </body>
+
 </html>
