--- a/Ejercicio_Tablas/ejercicio de tablas_reahaciendo/Formularios/Formularios.html
+++ b/Ejercicio_Tablas/ejercicio de tablas_reahaciendo/Formularios/Formularios.html
@@ -11,6 +11,12 @@
 <body>
 
     <form action="" method="get">
+
+        <input name="oculto" type="hidden" value="codeseguridad">
+
+        <br>
+        <br>
+
         <input name="Nombre" type="text">
         <br>
         <br>
