--- a/Ejercicio_Tablas/ejercicio de tablas_reahaciendo/Formularios/input_and_range.html
+++ b/Ejercicio_Tablas/ejercicio de tablas_reahaciendo/Formularios/input_and_range.html
@@ -32,7 +32,7 @@
         <option value="80"></option>
         <option value="90"></option>
         <option value="100"></option>
-    </datalist>
+    </datalist><br><br>
 
     <button type="submit">Enviar</button>
 
