--- a/Ejercicio_Tablas/ejercicio de tablas_reahaciendo/Form_parte_4.html
+++ b/Ejercicio_Tablas/ejercicio de tablas_reahaciendo/Form_parte_4.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +9,31 @@
 </head>
 
 <body>
-    
-    <h1 style="text-align: center; font-size: 60px; background-color: darkturquoise; color: whitesmoke;">Formularios - parte 4</h1>
 
-    
+    <form action="" method="get">
+        <h1 style="text-align: center; font-size: 60px; background-color: darkturquoise; color: whitesmoke;">Formularios
+            - parte 4</h1>
 
+        <label for="lenguaje">Seleccione un lenguaje</label><br>
+        <br>
+        <br>
+        <select style="text-align: center; font-size: 60px; background-color: darkturquoise; color: whitesmoke;"
+            name="lenguaje" id="lenguaje">
+            <option value="Html">Elija una opción</option>
+            <option value="Html">Perro</option>
+            <option value="Html">Gato</option>
+            <option value="Html">Elefante</option>
+            <option value="Html">Lagarto</option>
+            <option value="Html">Buitre</option>
+        </select><br><br>
+
+
+        <button style="box-shadow: 5px 5px 15px blue; font-size: 30px; color: white; background-color: darkturquoise;"
+            type="submit">Enviar
+        </button>
+
+    </form>
 
 </body>
+
 </html>
