--- a/Ejercicio_Tablas/ejercicio de tablas_reahaciendo/Formularios/Progress_Meter.html
+++ b/Ejercicio_Tablas/ejercicio de tablas_reahaciendo/Formularios/Progress_Meter.html
@@ -101,10 +101,12 @@
         <br>
         <br>
 
-        <button style="box-shadow: 5px 5px 5px blue; margin-left: 735px; padding-inline: 20px; padding: 20px;"  type="submit">Send</button>
+        <button style="box-shadow: 5px 5px 5px blue; 
+        margin-left: 735px; padding-inline: 20px; padding: 20px;"  type="submit">Send</button>
 
     </form>
 
+    <!-- realizar las demas operaciones (suma , resta , division) -->
 
 
 
