--- a/ejercicio de tablas_reahaciendo/Form_parte_4.html
+++ b/ejercicio de tablas_reahaciendo/Form_parte_4.html
@@ -6,19 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formularios parte 4</title>
+
+    <!-- Estilos -->
+    <style>
+        .lenguaje{
+            text-align: center; font-size: 60px; background-color: darkturquoise; color: whitesmoke;
+        }
+
+        .boton_send{
+            box-shadow: 5px 5px 15px blue; 
+            font-size: 30px; color: white; 
+            background-color: darkturquoise;
+        }
+
+        .tituloprincipal{
+            text-align: center; 
+            font-size: 60px; 
+            background-color: darkturquoise; 
+            color: whitesmoke;
+        }
+    </style>
+
 </head>
 
 <body>
 
     <form action="" method="get">
-        <h1 style="text-align: center; font-size: 60px; background-color: darkturquoise; color: whitesmoke;">Formularios
-            - parte 4</h1>
+        <h1 class="tituloprincipal">Formularios - parte 4</h1>
 
         <label for="lenguaje">Seleccione un lenguaje</label><br>
         <br>
         <br>
-        <select style="text-align: center; font-size: 60px; background-color: darkturquoise; color: whitesmoke;"
-            name="lenguaje" id="lenguaje">
+        <select class="lenguaje" name="lenguaje" id="lenguaje">
+            
             <option value="Html">Elija una opción</option>
             <option value="Html">Perro</option>
             <option value="Html">Gato</option>
@@ -28,7 +48,7 @@
         </select><br><br>
 
 
-        <button style="box-shadow: 5px 5px 15px blue; font-size: 30px; color: white; background-color: darkturquoise;"
+        <button class="boton_send"
             type="submit">Enviar
         </button>
 
