--- a/Primeros pasos/contenid-incrustado_5.html
+++ b/Primeros pasos/contenid-incrustado_5.html
@@ -5,7 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>contenido incrustado_parte_5</title>
+
+    <style>
+        .rectangulo{
+            border: 5px solid red;
+        }
+    </style>
 </head>
 
 <body>
@@ -13,7 +20,7 @@
     <h1>Contenido incrustado, parte 5</h1>
 
     <!-- RECTACNGULO CON LA ETIQUETA CANVAS Y SUS PROPIEDADES -->
-    <canvas id="Mi-tablero" width="600px" height="400px" style="border: 5px solid red;"></canvas>
+    <canvas class="rectangulo" id="Mi-tablero" width="600px" height="400px"></canvas>
 
     <script>
         // obtiene el elemento por el identificador
@@ -33,7 +40,7 @@
     </script>
 
 
-    </svg>
+    
 </body>
 
 </html>
