--- a/Ejercicio_Tablas/Index_tablas.html
+++ b/Ejercicio_Tablas/Index_tablas.html
@@ -26,6 +26,23 @@
             color:whitesmoke;
         }
 
+        /* columnas */
+        .columna1{
+            background-color: aqua; width: 200px;
+        }
+
+        .columna2{
+            background-color: red; width: 200px;
+        }
+
+        .columna3{
+            background-color: teal; width: 200px;
+        }
+
+        .columna4{
+            background-color: gray; width: 200px;
+        }
+
        
     </style>
 
@@ -258,10 +275,10 @@
 
     <table>
 
-        <colgroup style="background-color: aqua; width: 200px;"></colgroup>
-        <colgroup style="background-color: red; width: 200px;"></colgroup>
-        <colgroup style="background-color: teal; width: 200px;"></colgroup>
-        <colgroup style="background-color: gray; width: 200px;"></colgroup>
+        <colgroup class="columna1"></colgroup>
+        <colgroup class="columna2"></colgroup>
+        <colgroup class="columna3"></colgroup>
+        <colgroup class="columna4"></colgroup>
 
 
         <tr>
@@ -286,9 +303,6 @@
         </tr>
 
     </table>
-
-
-
 
 
 </body>
