--- a/Registro/Registro.html
+++ b/Registro/Registro.html
@@ -39,6 +39,15 @@
             font-size: 15px;
             /* border: 1px solid; */
         }
+
+        .click_reg{
+            font-size: 40px;
+            margin-left: 150px;
+            text-shadow: 2px 2px 2px green;
+            background-color: black;
+            color: whitesmoke;
+            
+        }
     </style>
 
 </head>
@@ -47,6 +56,10 @@
 
     <h1 class="Reg">Registro (Ejercicios)</h1>
     
+    <a class="click_reg" href="/Registro/Dashboard.html">Iniciar sesión</a>
+    <br>
+    <br>
+
     <form action="/Registro/Dashboard.html">
 
         <input class="inp" type="email" name="user" id="" placeholder="Email o usuario">
