--- a/Registro/Dashboard.html
+++ b/Registro/Dashboard.html
@@ -60,7 +60,7 @@
     <br>
     <br>
 
-    <form action="/Registro/Dashboard.html">
+    <form action="/Registro/Dashboard.html" method="post">
 
         <input class="inp" type="text" name="user" id="" placeholder="Nombre"><br>
         <input class="inp" type="text" name="pass" id="" placeholder="Apellido"><br>
@@ -70,7 +70,7 @@
         <input class="inp" type="text" name="pass" id="" placeholder="Nombre de usuario"><br>
         <input class="inp" type="password" name="pass" id="" placeholder="Contraseña">
         <br>
-        <button class="btn_enviar" type="submit">Iniciar sesión</button>
+        <button class="btn_enviar" type="submit">Registrar<a href="/Registro/Dashboard.html"></a> </button>
         
     </form>
     
