--- a/Registro/Registro.html
+++ b/Registro/Registro.html
@@ -60,7 +60,7 @@
     <br>
     <br>
 
-    <form action="/Registro/Dashboard.html">
+    <form action="/Registro/Dashboard.html" method="post">
 
         <input class="inp" type="email" name="user" id="" placeholder="Email o usuario">
         <input class="inp" type="password" name="pass" id="" placeholder="Contraseña">
