detalles de texto
ejercicios de detalles de textos informativos (escondidos).

--- a/Registro/Registro.html
+++ b/Registro/Registro.html
@@ -80,6 +80,8 @@
 
 <body>
 
+    <img src="" alt="">
+
     <h1 class="Reg">Registro (Ejercicios)</h1>
 
     <a class="click_reg" href="/Registro/Dashboard.html">Iniciar sesión</a>
@@ -96,6 +98,7 @@
     </form>
 
     <h3>Fecha de nacimiento</h3>
+    <div>Alternativa de fecha-calendario</div><input type="date"><br><br>
 
     <select class="FechaSeleccion" name="nacimiento[dia]" id="nacimiento-dia">
         <option value="1">1</option>
