Psudo clases add
clase 53 (continuar)

--- a/MODULO-CSS/Pseudo-clases adicionales/html/index.html
+++ b/MODULO-CSS/Pseudo-clases adicionales/html/index.html
@@ -15,6 +15,32 @@
     
     <div id="Title-PseudoClase">Pseudo clases adicionales</div>
 
-    
+    <nav>
+        <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </nav>
+
+    <section id="section1">
+        <h1>Seccion 1</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum vitae quos ad sapiente delectus perspiciatis beatae quo dignissimos necessitatibus. Laboriosam totam laborum cumque consequuntur molestias praesentium voluptatibus beatae. Cupiditate, dolore.</p>
+    </section>
+
+    <section id="section2">
+        <h1>Seccion 2</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro non, laboriosam delectus quidem quia eaque ab possimus quod dignissimos repellat voluptate modi officiis. Est ipsam aperiam doloribus nisi laboriosam repellat?</p>
+    </section>
+
+    <section id="section3">
+        <h1>Seccion 3</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, illum. Suscipit tempore voluptatum aspernatur natus modi sint a adipisci porro, quia delectus eius eveniet iure rem in asperiores aut earum.
+        </p>
+    </section>
+
+    <section>
+        <p></p>
+    </section>
 </body>
 </html>
