--- a/MODULO-CSS/Pseudo-clases adicionales/html/index.html
+++ b/MODULO-CSS/Pseudo-clases adicionales/html/index.html
@@ -17,9 +17,9 @@
 
     <nav>
         <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href=""></a>Enlace 1</li>
+            <li><a href=""></a>Enlace 2</li>
+            <li><a href=""></a>Enlace 3</li>
         </ul>
     </nav>
 
